--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard_m</title>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Icons+sharp"
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Sharp"
       rel="stylesheet">
       <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -12,7 +12,7 @@
     <div class="container">
         <aside>
             <div class="top">
-                <img src="./images/total-energies-logo.png" style="width:200px; height: 250px">
+                <img src="./images/total-energies-logo.png">
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">close</span>
                 </div>
@@ -29,10 +29,10 @@
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">browse_activity</span>
-                    <h3>View customer records</h3>
+                    <h3>Customer records</h3>
                 </a>
                 <a href="#">
-                    <span class="material-icons-sharp">mail_outline </span>
+                    <span class="material-icons-sharp">mail_outline</span>
                     <h3>Message</h3>
                     <span class="message-count">13</span>
                 </a>
@@ -41,7 +41,7 @@
                     <h3>Reports</h3>
                 </a>
                 <a href="#">
-                    <span class="material-icons-sharp">Logout </span>
+                    <span class="material-icons-sharp">Logout</span>
                     <h3>Logout</h3>
                 </a>
 
